--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <div class="space stars3"></div>
     <div class="space stars4"></div>
 
+    <div class="box-1">
+        <h1>Where's My Ball!!!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt porro, accusamus, optio numquam nobis error recusandae distinctio corporis blanditiis exercitationem repudiandae deleniti sequi quibusdam ea et architecto, illo voluptate tempora?</p>
+    </div>
+
     <div class="footer">
         <footer>
 
