--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
         </header>
     </div>
-    <div class="nav">
+    <div class="topnav">
         <nav>
-
+            <a href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
         </nav>
     </div>
 
@@ -24,9 +27,15 @@
     <div class="space stars3"></div>
     <div class="space stars4"></div>
 
-    <div class="box-1">
-        <h1>Where's My Ball!!!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt porro, accusamus, optio numquam nobis error recusandae distinctio corporis blanditiis exercitationem repudiandae deleniti sequi quibusdam ea et architecto, illo voluptate tempora?</p>
+    <div class="container-1">
+        <div class="box-1">
+            <h1>Where's My Ball!!!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt porro, accusamus, optio numquam nobis error recusandae distinctio corporis blanditiis exercitationem repudiandae deleniti sequi quibusdam ea et architecto, illo voluptate tempora?</p>
+        </div>
+        <div class="box-2">
+            <h2>Item</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quisquam porro quidem praesentium beatae at nobis similique in quam ipsum. Qui, ipsa. Tempora vitae expedita dolore repellendus minus sunt veritatis.</p>
+        </div>
     </div>
 
     <div class="footer">
