--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container-1">
         <div class="box-1">
-            <h1>Where's My Ball!!!</h1>
+            <h1 id="header">Where's My Ball!!!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt porro, accusamus, optio numquam nobis error recusandae distinctio corporis blanditiis exercitationem repudiandae deleniti sequi quibusdam ea et architecto, illo voluptate tempora?</p>
         </div>
         <div class="box-2">
@@ -38,10 +38,12 @@
         </div>
     </div>
 
+    <button type="button" onclick="countDown()">Click Me</button>
     <div class="footer">
         <footer>
 
         </footer>
     </div>
+    <script src="JS/main.js"></script>
 </body>
 </html>
